--- a/l10n_fi_account_income_statement/i18n/fi.po
+++ b/l10n_fi_account_income_statement/i18n/fi.po
@@ -1,31 +1,26 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # 	* l10n_fi_account_income_statement
+# Jarmo Kortetjärvi <jarmo.kortetjarvi@tawasta.fi>, 2016.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-26 12:42+0000\n"
-"PO-Revision-Date: 2016-02-26 14:42+0200\n"
-"Last-Translator: Jarmo Kortetjärvi <jarmo@futurable.fi>\n"
-"Language-Team: \n"
+"POT-Creation-Date: 2016-03-01 10:10+0000\n"
+"PO-Revision-Date: 2016-03-01 12:11+0200\n"
+"Last-Translator: Jarmo Kortetjärvi <jarmo.kortetjarvi@tawasta.fi>\n"
+"Language-Team: Finnish <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: \n"
-"Language: fi\n"
-"X-Generator: Poedit 1.7.5\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Gtranslator 2.91.6\n"
 
 #. module: l10n_fi_account_income_statement
 #: model:ir.model,name:l10n_fi_account_income_statement.model_account_account
 msgid "Account"
 msgstr "Tili"
-
-#. module: l10n_fi_account_income_statement
-#: model:ir.model,name:l10n_fi_account_income_statement.model_account_common_report
-msgid "Account Common Report"
-msgstr "Tilin yleisraportti"
 
 #. module: l10n_fi_account_income_statement
 #: model:ir.model,name:l10n_fi_account_income_statement.model_account_financial_report
@@ -39,9 +34,13 @@ msgstr "Tiliraportti"
 
 #. module: l10n_fi_account_income_statement
 #: field:accounting.report,analytic_account:0
-#: view:website:account.report_financial
 msgid "Analytic account"
 msgstr "Kustannuspaikka"
+
+#. module: l10n_fi_account_income_statement
+#: view:website:account.report_financial
+msgid "Analytic account:"
+msgstr "Kustannuspaikka:"
 
 #. module: l10n_fi_account_income_statement
 #: model:ir.actions.act_window,name:l10n_fi_account_income_statement.action_account_balance_sheet
